--- a/InstaClone/Info.plist
+++ b/InstaClone/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Wir benätigen das Bluetooth Signal (1)</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Wir benötigen das Bluetooth Signal (2)</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Wir benötigen das Bluetooth Signal (3)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
